# Aging

./: .env.example  .gitignore  .mailmap  LICENSE  METHYLATION_PIPELINE_README.md  README.md  annotate_la_snps_gtex.py  annotate_la_snps_vep.py  downstream_analysis.R  find_r.sh  make_pontaj.py  overlapping_genes_with_snps.xlsx  pipeline_validation.sh  plot_af_comparison.py  plot_clock_eval.py  pyproject.toml  repo_structure.txt  requirements.txt  setup.py
.githooks/: prepare-commit-msg
analysis/: Bioinformatics_Pipeline_Diagram  Fig4_Agent_System_Schema  Longevity_Direction_of_Effect_Analysis.md  ROGEN_Methylation_Pipeline_Summary.md  _manifest_input.xlsx
components/: DashboardFigureMockup.tsx
docs/: ACTIVITIES.md  AF_COMPARISON_FIGURES.md  ALPHAGENOME_ANALYSIS_EXPLANATION.md  CLOCK_EVAL_FIGURES.md  CLOCK_LIBRARY.md  CODE_MODULES_REFERENCE.md  EDA_DASHBOARD.md  EDA_MOCK_INTEGRATION.md  FIGURES.md  GENOMICS_ANALYSIS.md  GSE40279_CLOCK_TRAINING.md  LA_SNP_GTEX_ANNOTATION.md  LA_SNP_PUBLIC_FREQUENCY_PIPELINE.md  LA_SNP_VEP_ANNOTATION.md  METHYLATION_PIPELINE_QUICK_REFERENCE.md  METHYLATION_PIPELINE_README.md  METHYLATION_PIPELINE_USAGE.md  PROJECT_STRUCTURE.md  ROMANIAN_EPIGENETIC_CLOCK.md  SYNTHETIC_ROMANIAN_VCF_GENERATOR.md  SYNTHETIC_UKB_GENERATOR.md  SYNTHETIC_UKB_RAP_GENERATOR.md  UKBB_CI_COMPLIANCE_AUDIT.md  UKB_COMPLIANCE_AUDITOR.md  UKB_INTEGRATION_PIPELINE.md  UKB_PRE_COMMIT_HOOK.md  WORKFLOWS.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
notebooks/: AlphaGenome_updated.ipynb  README.md  UKB_Compliance_Auditor.ipynb  (+1 more)
(+148 files in other folders)
