[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rogen-aging"
version = "0.1.0"
description = "Project scaffold for genomic notebooks and analysis, managed with `uv`."
authors = [
    {name = "Mitya Toren", email = "mitya@rogen.ai"},
]
dependencies = [
    "alphagenome",
    "pandas",
    "matplotlib",
    "requests",
    "polars",
    "python-dotenv>=1.2.1",
    "networkx>=3.6",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "diagrams>=0.23.0",
    "ipykernel",
    "jupyterlab",
    "openpyxl>=3.1.5",
    "typer>=0.24.1",
    "pysam>=0.22",
    "streamlit>=1.40",
    "plotly>=6.6.0",
    "pyarrow>=22.0.0",
    "adjusttext>=1.3.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=8.0"]
genomics = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.sources]
rogen-aging = { path = "." }


